syntax = "proto3";
package fetch;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "WA4D0GServer";

enum RequestType {
	INIT = 0;
	UPDATE = 1;
	APPEND = 2;
}

enum ResponseType {
	ACCEPTED = 0;
	DECLINED = 1;
}

message CertificateDataDTO {
	int32 id = 1;
	string certificateHash = 2;
	string algorithm = 3;
	google.protobuf.Timestamp startDate = 4;
	google.protobuf.Timestamp endDate = 5;
}

message CertificateSubjectDTO {
	int32 id = 1;
	string subjectName = 2;
	string subjectPhone = 3;
	string subjectComment = 4;
	repeated CertificateDataDTO certificates = 5;
}

message ServerToClientSyncRequest {
	RequestType requestType = 1;
}

message ServerToClientSyncResponse {
	repeated CertificateSubjectDTO subjects = 1;
}

message ClientToServerSyncRequest {
	RequestType requestType = 1;	
	repeated CertificateSubjectDTO subjects = 2;
}

message ClientToServerSyncResponse {
	ResponseType responseType = 1;
}

service X509Communication {
	rpc GetCertificateSubjectsListFromClients (ServerToClientSyncRequest) returns (ServerToClientSyncResponse);
	rpc AppendCertificatesSubjectsToServerDatabase (ClientToServerSyncRequest) returns (ClientToServerSyncResponse);
}